<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/icon_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/action_want"
        android:icon="@drawable/icon_favorite"
        android:title="@string/action_want"
        app:showAsAction="always" />

    <item android:id="@+id/action_settings"
        android:icon="@drawable/icon_discover"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="always" />

</menu>
